--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 version = "1.0"
 
 [versions]
-adventure = "4.16.0"
+adventure = "4.17.0-SNAPSHOT"
 adventurePlatform = "4.3.2"
 ansi = "1.0.3"
 autoService = "1.1.1"
