--- a/src/main/resource-templates/fabric.mod.yaml
+++ b/src/main/resource-templates/fabric.mod.yaml
@@ -41,7 +41,7 @@ custom:
     net/minecraft/class_2960: [ net/kyori/adventure/key/Key ] # net/minecraft/resources/ResourceLocation
     net/minecraft/class_3414: [ net/kyori/adventure/sound/Sound<%= '$' %>Type ] # net/minecraft/sounds/SoundEvent
     net/minecraft/class_5321: [ net/kyori/adventure/key/Keyed ] # net/minecraft/resources/ResourceKey
-    net/minecraft/class_1799: [ net/kyori/adventure/text/event/HoverEventSource ] # net/minecraft/world/item/ItemStack
+    net/minecraft/class_1799: [ "net/kyori/adventure/text/event/HoverEventSource<Lnet/kyori/adventure/text/event/HoverEvent<%= '$' %>ShowItem;>" ] # net/minecraft/world/item/ItemStack # generic?
     net/minecraft/class_7469: [ net/kyori/adventure/chat/SignedMessage<%= '$' %>Signature ] # net/minecraft/network/chat/MessageSignature
     net/minecraft/class_7471: [ net/kyori/adventure/chat/SignedMessage ] # net/minecraft/network/chat/PlayerChatMessage
 
