--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,12 @@ ansi = "1.0.3"
 autoService = "1.1.1"
 checkstyle = "10.14.0"
 examination = "1.3.0"
-fabricApi = "0.97.8+1.20.6"
-fabricLoader = "0.15.10"
+fabricApi = "0.98.0+1.20.6"
+fabricLoader = "0.15.11"
 indra = "3.1.3"
 junit = "5.10.2"
 minecraft = "1.20.6"
-parchment = "1.20.4:2024.04.14"
+parchment = "1.20.6:2024.05.01"
 vineflower = "1.10.1"
 spotless = "6.25.0"
 
@@ -69,5 +69,5 @@ indra-licenseHeader = { id = "net.kyori.indra.licenser.spotless", version.ref = 
 indra-checkstyle = { id = "net.kyori.indra.checkstyle", version.ref = "indra" }
 indra-crossdoc = { id = "net.kyori.indra.crossdoc", version.ref = "indra" }
 indra-sonatype = { id = "net.kyori.indra.publishing.sonatype", version.ref = "indra" }
-nexusPublish = { id = "io.github.gradle-nexus.publish-plugin", version = "2.0.0-rc-2" }
+nexusPublish = { id = "io.github.gradle-nexus.publish-plugin", version = "2.0.0" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
